# linear-algerbra-and-its-application-term-project

./: CMakeLists.txt  GS.cpp  Jacobi.cpp  LU.cpp  README.md  data.cpp  exp1.cpp  gmres.cpp  sor.cpp  tool.cpp  tool.h
新增資料夾/: b.txt
